* Oct 5 2000 hship

Minor documentation and JWC errors in the TextField component.

* Oct 4 2000 hship

Fix a NullPointerException in SimpleApplication.cleanupAfterRequest().  The exception may be thrown
if another exception is thrown earlier in the request cycle (before any page recoders are accessed).

* Oct 4 2000 hship

Revise Submit and ImageButton components to set a property if clicked, remove
listener parameters from Form-related components.

* Sep 26 2000 hship

Fix NullPointerException when the Home page does NOT throw an exception inside validate().

* Sep 25 2000 hship

Change the signature for AbstractApplication.cleanupAfterRequest to include the IRequestCycle.
Undo the [114878] fix, since it uses servlet 2.2 only API.

* Sep 24 2000 hship

[114878] com.primix.tapestry.context-path should be for context 

* Sep 24 2000 hship

[115140] Home service must validate()

* Sep 13 2000 hship

[114017] Rollovers no longer compatible with Navigator 

* Sep 12 2000 hship

More Javadoc for ShowInspector component.

* Sep 12 2000 hship

Beef up the ShowInspector component, adding default images and rollover images, and
add parameters to allow those to be overriden.
Remove the Java Source tab from the Inspector ... turns out that shipping Java code in the
Tapestry framework confuses the Java compiler when compiling projects that depend on
the Tapestry framework.

* Sep 11 2000 hship

Add a Java Code tab to the Inspector.
Ship Java code for components and pages as resources.

* Sep 11 2000 hship

Fix some bad Javadoc links.

* Sep 10 2000 hship

Add new view to the Inspector:  Properties.
Improve CSS for the Inspector (conistent fonts and colors between images and HTML text).
Change inspector to not automatically switch to the Specification page when a new page is selected.
[113893] Rollover causes minor JavaScript problems

* Sep 8 2000 hship

Started ChangeLog for Tapestry, some time after release 0.1.3.
Added provisional image graphics for the Inspector.